<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.javier_t.shopapp.MainShopActivity">

    <ImageView
        android:id="@+id/image_of_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_coffee2go"
        android:layout_marginTop="@dimen/image_margin"
        android:layout_marginStart="@dimen/image_margin"/>

    <TextView
        android:id="@+id/text_of_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_alignBottom="@id/image_of_shop"
        android:layout_toEndOf="@id/image_of_shop"
        android:text="@string/tv_name"/>

    <TextView
        android:id="@+id/stock_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/image_of_shop"
        android:layout_marginTop="@dimen/bu_can_margin"
        android:layout_toEndOf="@id/image_of_shop"
        android:text="@string/stock_name"/>

    <Spinner
        android:id="@+id/qty_to_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/dialog_title_spinner"
        android:spinnerMode="dialog"
        android:layout_alignBottom="@id/stock_left"
        android:layout_toEndOf="@id/text_of_shop"/>

    <Button
        android:id="@+id/button_to_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/qty_to_buy"
        android:layout_marginTop="@dimen/bu_margin"
        android:text="@string/action_buy"/>

    <Button
        android:id="@+id/button_to_cancel"
        android:layout_alignBottom="@id/button_to_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_of_shop"
        android:text="@string/action_cancel"/>

</RelativeLayout>